standard rag is working

--- a/agents.ipynb
+++ b/agents.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Agentic RAG via tutorial\n",
+    "- Tutorial link: https://medium.com/the-ai-forum/build-an-agentic-rag-using-huggingface-transformer-agent-ec741f09ddcc\n",
+    "- 20 Jan 2025"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +86,7 @@
     "from transformers.agents import Tool, HfApiEngine, ReactJsonAgent #replaces HfEngine\n",
     "from huggingface_hub import InferenceClient\n",
     "from langchain_community.document_loaders import DirectoryLoader, UnstructuredPDFLoader, PyPDFLoader\n",
-    "\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "import os\n",
     "import glob\n"
    ]
@@ -109,6 +118,7 @@
     "    all_docs.extend(docs)\n",
     "print(all_docs)\n",
     "\n",
+    "## Some of the original tutorial code that didn't work\n",
     "# os.mkdir(\"rag_data\")\n",
     "# os.getcwd()\n",
     "#https://arxiv.org/pdf/2306.05033 # replaced a researchgate article\n",
@@ -172,11 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 109/109 [00:01<00:00, 74.73it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Split documents and remove duplicates\n",
+    "## Split documents and remove duplicates\n",
+    "# For reference, doc really means page of a file. For some reason these are treated separately when loaded\n",
     "# logger.info(\"Splitting documents...\")\n",
     "docs_processed = []\n",
     "unique_texts = {}\n",
@@ -187,6 +206,83 @@
     "            unique_texts[new_doc.page_content] = True\n",
     "            docs_processed.append(new_doc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Initialize the embedding model\n",
+    "model_name = \"thenlper/gte-small\"\n",
+    "model_kwargs = {'device': 'cpu'}\n",
+    "encode_kwargs = {'normalize_embeddings': False}\n",
+    "embedding_model = HuggingFaceEmbeddings(\n",
+    "    model_name=model_name,\n",
+    "    model_kwargs=model_kwargs,\n",
+    "    encode_kwargs=encode_kwargs\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the vector database\n",
+    "# logger.info(\"Creating vector database...\")\n",
+    "vectordb = FAISS.from_documents(\n",
+    "    documents=docs_processed,\n",
+    "    embedding=embedding_model,\n",
+    "    distance_strategy=DistanceStrategy.COSINE,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Creating retriever tool that combines and returns most relevant chunks\n",
+    "class RetrieverTool(Tool):\n",
+    "    name = \"retriever\"\n",
+    "    description = \"Using semantic similarity, retrieves some documents from the knowledge base that have the closest embeddings to the input query.\"\n",
+    "    inputs = {\n",
+    "        \"query\": {\n",
+    "            \"type\": \"string\",\n",
+    "            \"description\": \"The query to perform. This should be semantically close to your target documents. Use the affirmative form rather than a question.\",\n",
+    "        }\n",
+    "    }\n",
+    "    output_type = \"string\"\n",
+    "\n",
+    "    def __init__(self, vectordb, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.vectordb = vectordb\n",
+    "\n",
+    "    def forward(self, query: str) -> str:\n",
+    "        assert isinstance(query, str), \"Your search query must be a string\"\n",
+    "\n",
+    "        docs = self.vectordb.similarity_search(\n",
+    "            query,\n",
+    "            k=7,\n",
+    "        )\n",
+    "\n",
+    "        return \"\\nRetrieved documents:\\n\" + \"\".join(\n",
+    "            [f\"===== Document {str(i)} =====\\n\" + doc.page_content for i, doc in enumerate(docs)]\n",
+    "        )\n",
+    "\n",
+    "## Create an instance of the RetrieverTool\n",
+    "retriever_tool = RetrieverTool(vectordb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
